--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
   <div class="js-clock">
     <h1></h1>
   </div>
+  <form class="js-form">
+    <input type="text" placeholder="what's your name?"/>
+  </form>
   <script src="./javaScript/time.js"></script>
+  <script src="./javaScript/greeting.js"></script>
 </body>
 
 </html>
