--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
   <div class="js-clock">
     <h1></h1>
   </div>
-  <form class="js-form">
+  <form class="js-form form">
     <input type="text" placeholder="what's your name?"/>
   </form>
+  <h4 class="js-greetings greetings"></h4>
   <script src="./javaScript/time.js"></script>
   <script src="./javaScript/greeting.js"></script>
 </body>
