--- a/index.html
+++ b/index.html
@@ -15,8 +15,15 @@
     <input type="text" placeholder="what's your name?"/>
   </form>
   <h4 class="js-greetings greetings"></h4>
+  <form class="js-toDoForm">
+    <input type="text" placeholder="Write a to do"/>
+  </form>
+  <ul class="js-toDoList">
+
+  </ul>
   <script src="./javaScript/time.js"></script>
   <script src="./javaScript/greeting.js"></script>
+  <script src="./javaScript/todo.js"></script>
 </body>
 
 </html>
