--- a/index.html
+++ b/index.html
@@ -8,22 +8,24 @@
   <title>Vanilla JS</title>
 </head>
 <body>
-  <div class="js-clock">
-    <h1></h1>
+  <div class="wrap">
+    <div class="js-clock">
+      <h1></h1>
+    </div>
+    <form class="js-form form">
+      <input type="text" placeholder="what's your name?"/>
+    </form>
+    <h4 class="js-greetings greetings"></h4>
+    <form class="js-toDoForm">
+      <input type="text" placeholder="Write a to do"/>
+    </form>
+    <ul class="js-toDoList">
+    </ul>
   </div>
-  <form class="js-form form">
-    <input type="text" placeholder="what's your name?"/>
-  </form>
-  <h4 class="js-greetings greetings"></h4>
-  <form class="js-toDoForm">
-    <input type="text" placeholder="Write a to do"/>
-  </form>
-  <ul class="js-toDoList">
-
-  </ul>
   <script src="./javaScript/time.js"></script>
   <script src="./javaScript/greeting.js"></script>
   <script src="./javaScript/todo.js"></script>
+  <script src="./javaScript/bg.js"></script>
 </body>
 
 </html>
