--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
     </form>
     <ul class="js-toDoList">
     </ul>
+    <span class="js-weather"></span>
   </div>
   <script src="./javaScript/time.js"></script>
   <script src="./javaScript/greeting.js"></script>
   <script src="./javaScript/todo.js"></script>
   <script src="./javaScript/bg.js"></script>
+  <script src="./javaScript/weather.js"></script>
 </body>
 
 </html>
